hbs templates done

--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,4 +1,4 @@
-<img src={{imgLink}}/>
+<img src={{image}}/>
 <p>{{text}}</p>
-<button class="optionOneButton" type="button">{{option 1}}</button>
-<button class="optionOneButton" type="button">{{option 2}}</button>
+<button class="optionOneButton" type="button">{{buttonText}}</button>
+<button class="optionOneButton" type="button">{{buttonText}}</button>
