--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,4 +1,8 @@
 <img src={{image}}/>
 <p>{{text}}</p>
-<button class="optionOneButton" type="button">{{buttonText}}</button>
-<button class="optionOneButton" type="button">{{buttonText}}</button>
+<form action={{id.options[0]toRoute}} method="post">
+  <button class="optionOneButton" type="button" method="post">{{id.options[0]buttonText}}</button>
+</form>
+<form form action={{id.options[1]toRoute}} method="post">
+  <button class="optionOneButton" type="button">{{options[1].buttonText}}</button>
+</form>
