--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,8 +1,8 @@
 <img src={{image}}/>
 <p>{{text}}</p>
-<form action={{id.options[0]toRoute}} method="post">
-  <button class="optionOneButton" type="button" method="post">{{id.options[0]buttonText}}</button>
+{{!-- <form action={{options[0].toRoute}} method="post">
+  <button class="optionOneButton" type="button" method="post">{{options[0].buttonText}}</button>
 </form>
-<form form action={{id.options[1]toRoute}} method="post">
+<form form action={{options[1].toRoute}} method="post">
   <button class="optionOneButton" type="button">{{options[1].buttonText}}</button>
-</form>
+</form> --}}
