add kayne stuff

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -1,3 +1,8 @@
-<img src={{image}}/>
-<p>{{text}}</p>
-<button class="startButton" type="button">Start Your Story</button>
+<div class="start-screen">
+
+<h1 class="home-text">BANGKOK STORY</h1>
+<br>
+<p>After a long night out drinking you find yourself in somewhere very unfamiliar...</p>
+<br>
+<a href="/game" class="button">Start Your Story</a>
+</div>
