--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -8,10 +8,10 @@
 <a href="/game" class="button">Start Your Story</a>
 </div>
 
-<img src={{image}}/>
+<img src="{{image}}"/>
 <p>{{text}}</p>
 
-<button class="startButton" type="button">Start Your Story</button> --}}
+<button class="startButton" type="button">Start Your Story</button> 
 
 <button class="startButton" type="button">Start Your Story</button>
 
