--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,4 +1,4 @@
-<img src={{image}}/>
+<img src="{{image}}"/>
 <p>{{text}}</p>
 {{!-- <form action={{options[0].toRoute}} method="post">
   <button class="optionOneButton" type="button" method="post">{{options[0].buttonText}}</button>
