--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,7 +1,7 @@
 body {
   background-color: #000000;
   color: #FFFFFF;
-  font-family: 'monospace', cursive;
+  font-family: monospace, cursive;
 }
 .start-screen {
 text-align: center;
