no styling but some routes changes

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -1,6 +1,7 @@
 <div class="start-screen">
 
 <h1 class="home-text">BANGKOK STORY</h1>
+<img src="{{image}}"/>
 <br>
 <p>After a long night out drinking you find yourself in somewhere very unfamiliar...</p>
 <br>
