--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,8 +1,3 @@
 <img src="{{image}}"/>
 <p>{{text}}</p>
-{{!-- <form action={{options[0].toRoute}} method="post">
-  <button class="optionOneButton" type="button" method="post">{{options[0].buttonText}}</button>
-</form>
-<form form action={{options[1].toRoute}} method="post">
-  <button class="optionOneButton" type="button">{{options[1].buttonText}}</button>
-</form> --}}
+<a class="button" href="/win">Option 1</a>
