--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,3 +1,8 @@
-<img src="{{image}}"/>
+<img class="story-image"src="{{image}}"/>
 <p>{{text}}</p>
+<form action="{{button1.toRoute}}">
 <a class="button" href="/win">Option 1</a>
+</form>
+<form action="{{options.toRoute}}">
+  <a class="button" href="/win">Option 2</a>
+</form>
