--- a/server/public/main.css
+++ b/server/public/main.css
@@ -29,10 +29,10 @@ text-align: center;
 } */
 
 .story-image{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 50px;
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .questions {
