--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,8 +1,26 @@
 <img class="story-image"src="{{image}}"/>
 <p>{{text}}</p>
-<form action="{{button1.toRoute}}">
-<a class="button" href="/win">Option 1</a>
+
+<form action="{{button2-link}}">
+  <button class="button">{{button1-text}}</a>
 </form>
-<form action="{{options.toRoute}}">
-  <a class="button" href="/win">Option 2</a>
+<form action="{{button2-link}}">
+  <button class="button">{{button2-text}}</a>
 </form>
+
+{{!-- function goToPage(string) {
+  router.get(string, (req, res) => {
+    fs.readFile('server/data/story.JSON')
+      .then((storyString) => {
+        return JSON.parse(storyString)
+      })
+      .then((storyObj) => {
+        return storyObj.story.find((page) => {
+          page.id == string
+        })
+      })
+      .then((page) => {
+        console.log(page)
+      })
+  })
+} --}}
