--- a/server/public/main.css
+++ b/server/public/main.css
@@ -48,8 +48,9 @@ text-align: center;
   background-color:rgba(0,0,0,0);
   padding: 0.5em 1em 0.5em 1em;
   text-decoration: none;
-  margin-bottom: 18px;
+  margin: 18px;
   display: inline-block;
+  color:#FFFFFF
 }
 
 .button:link {
