Fix gameover  page

--- a/server/views/end.hbs
+++ b/server/views/end.hbs
@@ -1,3 +1,8 @@
-<img class="story-image"src="{{image}}"/>
-<p>due to your absolute stupidity, you died. try again</p>
+<div class="start-screen">
+{{!-- <img class="story-image"src="{{image}}"/> --}}
+<p>due to your incompetence, you have failed your quest.</p>
+<br>
+<p>try again?</p>
+<br>
 <a class="button" href="/">Restart</a>
+</div>
