--- a/server/public/main.css
+++ b/server/public/main.css
@@ -16,6 +16,9 @@ text-align: center;
   justify-content: center;
 }
 
+
+
+
 /* .app {
   display: flex;
   flex-direction: column;
@@ -30,9 +33,10 @@ text-align: center;
 
 .story-image{
   display: block;
-  width: 50%;
+  height: 50vh;
   margin-left: auto;
   margin-right: auto;
+
 }
 
 .questions {
