--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,7 +1,8 @@
 <div class="container">
 <img class="story-image"src="{{image}}"/>
 <p>{{text}}</p>
-
+</div>
+<div class="container">
 <form action="{{button1-link}}">
   <button class="button">{{button1-text}}</a>
 </form>
