--- a/server/views/game.hbs
+++ b/server/views/game.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 <img class="story-image"src="{{image}}"/>
-<p>{{text}}</p>
+<p class="question">{{text}}</p>
 </div>
 <div class="container">
 <form action="{{button1-link}}">
