--- a/server/views/end.hbs
+++ b/server/views/end.hbs
@@ -1,6 +1,6 @@
 <div class="start-screen">
-{{!-- <img class="story-image"src="{{image}}"/> --}}
-<p>somehow, due to your incompetence, you have failed your quest.</p>
+<img class="story-image"src="{{image}}"/>
+<p>{{text}}</p>
 <br>
 <p>try again?</p>
 <br>
