Added a reward for winning

--- a/server/views/win.hbs
+++ b/server/views/win.hbs
@@ -1,6 +1,7 @@
 <div class="start-screen">
 <img class="story-image"src="{{image}}"/>
 <p>{{text}}</p>
+<p> As a reward for winning the residents of Bangkok have gifted you the street name of "{{rapName}}".</p>
 <br>
 <br>
 <a class="button" href="/">Restart</a>
